--- a/_data/engl354fall2020.yml
+++ b/_data/engl354fall2020.yml
@@ -1,87 +1,135 @@
 ---
-#
-# Notes on using this file:
-#
-# DATES
-# Dates must be formatted in a strict YYYY-MM-DD format, meaning you have to put
-# a 0 in front of any single digit month or day numbers.
-#
-# For instance, the 6th of August 2020 would be 2020-08-06. Without the extra
-# leading zero, this script won't work.
-#
-# DAYS OF THE WEEK
-# Days of the week, for the meeting key and for the is_a key in redefined, must
-# be written in all lower case. Days can have the following values:
-#
-# - monday
-# - tuesday
-# - wednesday
-# - thursday
-# - friday
-# - saturday
-#
-# NAMES OF WEEKS
-# For the weeks key, due to a quirk in how YAML works, the number of the week (
-# e.g. week 1 or week 12) has to be in quotes. I know it's strange.
-#
-# Set to the semester's start date using the YYYY-MM-DD format discussed above.
-start: 2019-08-26
-# Set to the semester's end date using the YYYY-MM-DD format discussed above.
-end: 2019-12-04
-# This key lets you set any holidays in the semester. The date key should be set
-# using the YYYY-MM-DD format discussed above and the name key can be set to any
-# string allowed in YAML.
+start: 2020-08-19
+end: 2020-11-24
 holidays:
-  - date: 2019-11-27
+  - date: 2020-11-25
+    name: Reading Day
+  - date: 2020-11-26
     name: Thanksgiving
-  - date: 2019-11-28
+  - date: 2020-11-27
     name: Thanksgiving
-  - date: 2019-11-29
-    name: Thanksgiving
-# If your university uses redefined days, you can set them here. Set the date
-# in the YYYY-MM-DD format discussed above and the is_a key must be in
-# lowercase.
-redefined:
-  - date: 2019-12-02
-    is_a: thursday
-  - date: 2019-12-03
-    is_a: friday
-# An array of days on which the class meets. These need to be all lowercase:
 meets:
-  - tuesday
-  - thursday
-# This key contains names for each week. Because a number cannot be the key for
-# a mapping in YAML, we have to put the week number in quotes. It's strange,
-# I know.
+  - monday
+  - wednesday
+  - friday
 units:
-  - title: Understanding History
+  - title: Rhetoric as a Solution to the Problem of Modernity
     start: 1
-  - start: 6
-    description: |
-      This unit examines the relationship between rhetoric and human
-      subjectivity.
-  - title: Emerging Technology
-    start: 11
-    description: |
-      This unit explores the relationship between rhetoric and emerging
-      technologies.
+  - title: Modern Theories of Persuasion
+    start: 5
+  - title: "Case Study: Rhetoric and Food"
+    start: 10
 weeks:
-  "1": 'Introduction'
-  "2": 'First Week of Instruction'
-  "14": 'Final Week of Instruction'
-# This key contains an array of course meetings. Each course meeting will be
-# parsed as Markdown, so you can use bold, italic, links, and lists.
-#
-# The | denotes a literal block, which means that any line breaks will be
-# produced in the data but the line will not be otherwise broken. This kind of
-# block notation allows multi-line content to be stored in a YAML array. We use
-# it to hold our Markdown content. All lines of content in each meeting must be
-# indented by four spaces at the start of the line.
+  "1": Why Do People Do Dumb Things?
+  "2": Why Are Cities So Scary?
+  "3": What Do Words Actually Do?
+  "4": How Do Words Manipulate the Public?
+  "5": Why Aren't We Talking About Rhetoric?
+  "6": What Happens When We Do a Rhetoric?
+  "7": How Does this Work in the Real World?
+  "8": How Else Do We Argue?
+  "9": Where Else Does Rhetoric Happen?
+  "10": Does Food Tell a Story?
+  "11": Is This All Natural?
+  "12": Who Makes the Most Authentic Food?
+  "13": What Should We Have For Dinner?
+  "14": You Eat What for Thanksgiving?
+  "15": What Should I Write My Paper About?
 classes:
   - |
-    * Introductions
     * Course Overview
   - |
-    An Instruction Day
+    * Sigmund Freud, from *Beyond the Pleasure Principle*
   - |
-    **Here's an important announcement**
+    - Finish Freud
+  - |
+    * Bronislaw Malinowski, from *Myth in Primitive Psychology*
+  - |
+    * Finish Malinowski
+    * Georg Simmel, [from *Metropolis and Modern Life*](http://www.blackwellpublishing.com/content/bpl_images/content_store/sample_chapter/0631225137/bridge.pdf)
+    * **First Participation Card Due**
+  - |
+    * Finish Simmel
+  - |
+    * Ferdinand de Saussure, "Object of Linguistics" & "Nature of Linguistic Signs" from *Course in General Linguistics*
+  - |
+    * Finish de Saussure
+    * Friedrich Nietzsche, "On Truth and Lies in a Nonmoral Sense"
+  - |
+    * Finish Nietzsche
+  - |
+    * Edward Bernays, from [*Propaganda*](http://www.historyisaweapon.org/defcon1/bernprop.html)
+       * Ch. 1-2
+  - |
+    * Finish Bernays
+    * Kenneth Burke, "The Rhetoric of Hitler's Battle"
+  - |
+    * Finish Burke
+  - |
+    * Wayne Booth, ["The Revival of Rhetoric"](https://www-jstor-org.lib-ezproxy.tamu.edu:9443/stable/1261264)
+  - |
+    - Finish Booth
+    * John Poulakos, ["Toward a Sophistic Definition of Rhetoric"](https://www-jstor-org.lib-ezproxy.tamu.edu:9443/stable/40237348)
+  - |
+    * Finish Poulakos
+  - |
+    * Paper Workshop Day
+  - |
+    * Lloyd F. Bitzer, ["The Rhetorical Situation"](https://www-jstor-org.lib-ezproxy.tamu.edu:9443/stable/40236733)
+  - |
+    * Finish Bitzer
+    * **Paper 1 Due by 11:59PM**
+  - |
+    * Maurice Charland, ["Constitutive Rhetoric"](http://ezproxy.library.tamu.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=cms&AN=10104146&site=ehost-live)
+  - |
+    * Finish Charland
+    * Simone De Beauvoir, from [*The Second Sex*](https://www.marxists.org/reference/subject/ethics/de-beauvoir/2nd-sex/introduction.htm)
+  - |
+    * Finish De Beauvoir
+  - |
+    * Betty Friedan, from [*The Feminine Mystique*](http://www.nationalhumanitiescenter.org/ows/seminars/tcentury/FeminineMystique.pdf)
+  - |
+    * Finish De Beauvoir
+    * Sonja K. Foss & Cindy L. Griffin, ["Beyond Persuasion: A Proposal for an Invitational Rhetoric"](http://sonjafoss.com/html/Foss21.pdf)
+  - |
+    * Finish Foss & Griffin
+  - |
+    * Krista Ratcliffe, ["Rhetorical Listening: A Trope for Interpretive Invention and a 'Code of Cross-cultural Conduct'"](https://epublications.marquette.edu/cgi/viewcontent.cgi?article=1286&context=english_fac)
+  - |
+    * Finish Ratcliffe
+    * Jim W. Corder, ["Argument as Emergence, Rhetoric as Love"](https://www-jstor-org.lib-ezproxy.tamu.edu:9443/stable/465760)
+  - |
+    * Finish Corder
+  - |
+  - |
+    * Exam Review
+  - |
+    * **Exam 1**
+    * Bring Blue Books!
+  - |
+    * Michael Pollan, ["Introduction" from *Cooked*](https://michaelpollan.com/wordpress/wp-content/uploads/2013/03/Cooked_Pollan_Introduction.pdf) (read from pg. 19 until the end)
+  - |
+    * Pollan
+    * Alexis Shotwell, from *Against Purity*
+  - |
+    * Finish Shotwell
+  - |
+    * Christie Aschwanden, ["No, LaCroix Isn’t Poisoning You Like You’re A Giant Cockroach"](https://fivethirtyeight.com/features/no-lacroix-isnt-poisoning-you-like-youre-a-giant-cockroach/)
+  - |
+    * Timothy Richardson, ["The Authenticity of What's Next"](http://enculturation.net/authenticity)
+  - |
+    * Finish Richardson
+  - |
+    * Watch "Vladimir Mukhin" from *Chef's Table*, Vol. 3 on Netflix
+  - |
+    * Minerva Orduño Rincón, ["The Authenticity Trap of Mexican Food in America"](https://www.phoenixnewtimes.com/restaurants/the-authenticity-trap-of-mexican-food-in-america-7538626)
+  - |
+    * Anna M. Young, ["The Politics of Wine and the Style of Bullshit"](https://www-tandfonline-com.srv-proxy1.library.tamu.edu/doi/abs/10.1080/02773945.2015.1088344)
+  - |
+    * Pete Wells, ["As Not Seen on TV"](https://www.nytimes.com/2012/11/14/dining/reviews/restaurant-review-guys-american-kitchen-bar-in-times-square.html)
+    * [American Bar and Kitchen Menu](https://external-preview.redd.it/Xm38oYrH3bL903NziylJMUY2uv1Gn8ZdK64slgATxOI.jpg?auto=webp&s=2c1f6de98b3780adf80139a23d52c53a915aa90a)
+  - |
+    * Work on Your Paper
+  - |
+    * Paper Workshop Day
+    * **Paper 2 Due 12/08 by 11:59PM**
