--- a/tracery-tester/package.json
+++ b/tracery-tester/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
     "parcel-bundler": "^1.12.4"
   }
 }
